--- a/final/jjp.plist
+++ b/final/jjp.plist
@@ -59,7 +59,7 @@
 				
    <key>bundle-identifier</key>
 				
-   <string>com.qsky.jsgame</string>
+   <string>com.qsky.jjyjiangsu</string>
 				
    <key>bundle-version</key>
 				
