--- a/final/jjp.plist
+++ b/final/jjp.plist
@@ -23,7 +23,7 @@
 					
    <key>url</key>
 					
-   <string>http://s1.jiajiaplay.com:884/DownLoad/phone/ios/jjp.ipa</string>
+   <string>http://s9.jiajiaplay.com/DownLoad/phone/ios/jjp.ipa</string>
 				
 </dict>
 				
@@ -35,7 +35,7 @@
 					
    <key>url</key>
 					
-   <string>http://s1.jiajiaplay.com:884/DownLoad/phone/ios/displayImage_jjp.png</string>
+   <string>http://s9.jiajiaplay.com/DownLoad/phone/ios/displayImage_jjp.png</string>
 				
 </dict>
 				
@@ -47,7 +47,7 @@
 					
    <key>url</key>
 					
-   <string>http://s1.jiajiaplay.com:884/DownLoad/phone/ios/displayImage_jjplay.png</string>
+   <string>http://s9.jiajiaplay.com/DownLoad/phone/ios/displayImage_jjplay.png</string>
 				
 </dict>
 			
